[macOS] WebProcessProxy::sendAudioComponentRegistrations leaks CFDataRef https://bugs.webkit.org/show_bug.cgi?id=224349 <rdar://problem/76176827>

Reviewed by Jer Noble.

Tested manually.

* UIProcess/Cocoa/WebProcessProxyCocoa.mm:
(WebKit::WebProcessProxy::sendAudioComponentRegistrations): The CFDictionary
returned by AudioComponentFetchServerRegistrations is newly allocated, so adopt
it into the RetainPtr so we don't increase the retain count.


Canonical link: https://commits.webkit.org/236322@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@275735 268f45cc-cd09-0410-ab3c-d52691b4dbfc